# MartixProcessor

./: CMakeLists.txt  MatrixCalculatorSln.sln  README.md
MatrixCalculator/: CMakeLists.txt  MatrixCalculator.vcxproj  MatrixCalculator.vcxproj.filters
MatrixCalculator/src/: ConsoleClear.h  ConsoleMenu.cpp  ConsoleMenu.h  MatrixClass.cpp  MatrixClass.h  main.cpp
